// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton is checked when 'checked' prop is passed 1`] = `
<label
  className="ch-radio-button checked"
  htmlFor="radio-1"
  onKeyPress={[Function]}
  tabIndex={0}
>
  <input
    checked={true}
    id="radio-1"
    onChange={[Function]}
    type="radio"
  />
  label
</label>
`;

exports[`RadioButton is disabled when 'disabled' prop is passed 1`] = `
<label
  className="ch-radio-button disabled"
  htmlFor="radio-1"
  onKeyPress={[Function]}
  tabIndex={-1}
>
  <input
    disabled={true}
    id="radio-1"
    onChange={[Function]}
    type="radio"
  />
  label
</label>
`;

exports[`RadioButton renders with label 1`] = `
<label
  className="ch-radio-button"
  htmlFor="radio-1"
  onKeyPress={[Function]}
  tabIndex={0}
>
  <input
    id="radio-1"
    onChange={[Function]}
    type="radio"
  />
  label
</label>
`;
